--- a/programming/language/python/python-clamav/pspec.xml
+++ b/programming/language/python/python-clamav/pspec.xml
@@ -25,7 +25,7 @@
     <Package>
         <Name>python-clamav</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.96.2">clamav</Dependency>
+            <Dependency>clamav</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
