--- a/programming/language/python/pyparted/pspec.xml
+++ b/programming/language/python/pyparted/pspec.xml
@@ -16,7 +16,7 @@
         <Archive sha1sum="4d11482a4de7ec6962dfbb36a67965bd35b0daf6" type="targz">https://fedorahosted.org/releases/p/y/pyparted/pyparted-3.8.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-decorator</Dependency>
-            <Dependency versionFrom="2.3">parted-devel</Dependency>
+            <Dependency>parted-devel</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -24,7 +24,7 @@
         <Name>pyparted</Name>
         <RuntimeDependencies>
             <Dependency>python-decorator</Dependency>
-            <Dependency versionFrom="2.2">parted</Dependency>
+            <Dependency>parted</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
