--- a/programming/language/python/pyqtermwidget/pspec.xml
+++ b/programming/language/python/pyqtermwidget/pspec.xml
@@ -15,10 +15,10 @@
         <Description>A simple terminal widget for using with PyQt based applications</Description>
         <Archive sha1sum="682183e655248c59d2eb75843d989e6c1dca01d2" type="targz">http://anka.pardus-linux.org/2013/source/qtermwidget-pyqt-fixes.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="4.6.2">qt-devel</Dependency>
-            <Dependency versionFrom="4.8.3">python-qt-devel</Dependency>
-            <Dependency versionFrom="4.12.1">sip-devel</Dependency>
-            <Dependency versionFrom="0.2.0">qtermwidget-devel</Dependency>
+            <Dependency>qt-devel</Dependency>
+            <Dependency>python-qt-devel</Dependency>
+            <Dependency>sip-devel</Dependency>
+            <Dependency>qtermwidget-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">colorscheme-workaround.patch</Patch>
@@ -30,9 +30,9 @@
         <Name>pyqtermwidget</Name>
         <RuntimeDependencies>
             <Dependency>qt</Dependency>
-            <Dependency versionFrom="4.8.3">python-qt</Dependency>
-            <Dependency versionFrom="4.12.1">sip</Dependency>
-            <Dependency versionFrom="0.2.0">qtermwidget</Dependency>
+            <Dependency>python-qt</Dependency>
+            <Dependency>sip</Dependency>
+            <Dependency>qtermwidget</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
