--- a/programming/language/python/python-cairo/pspec.xml
+++ b/programming/language/python/python-cairo/pspec.xml
@@ -15,7 +15,7 @@
         <Description>Pycairo is set of Python bindings for the cairo graphics library.</Description>
         <Archive sha1sum="6bb0b3e0249bce9fc0480aadad0c602d32f26ec1" type="targz">http://cairographics.org/releases/py2cairo-1.8.10.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.8.10">cairo-devel</Dependency>
+            <Dependency>cairo-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <!-- prevents sandbox violation -->
@@ -26,7 +26,7 @@
     <Package>
         <Name>python-cairo</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.8.10">cairo</Dependency>
+            <Dependency>cairo</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
