--- a/programming/language/python/python-pygobject3/pspec.xml
+++ b/programming/language/python/python-pygobject3/pspec.xml
@@ -16,7 +16,7 @@
         <Archive sha1sum="abf695f16d36a36e72f713016a92eab0646d37a2" type="tarxz">http://ftp.gnome.org/pub/GNOME/sources/pygobject/3.4/pygobject-3.4.2.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>python-cairo-devel</Dependency>
-            <Dependency versionFrom="1.34.0">gobject-introspection-devel</Dependency>
+            <Dependency>gobject-introspection-devel</Dependency>
             <Dependency>libffi-devel</Dependency>
         </BuildDependencies>
     </Source>
@@ -25,7 +25,7 @@
         <Name>python-pygobject3</Name>
         <RuntimeDependencies>
             <Dependency>python-cairo</Dependency>
-            <Dependency versionFrom="1.34.0">gobject-introspection</Dependency>
+            <Dependency>gobject-introspection</Dependency>
             <Dependency>libffi</Dependency>
         </RuntimeDependencies>
         <Files>
