--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -17,8 +17,8 @@
         <Archive sha1sum="83e649a39643ffc96741bca70177e9c73789e54d" type="targz">mirrors://sourceforge/pyqt/PyQt-x11-gpl-4.9.6.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>qt-devel</Dependency>
-            <Dependency versionFrom="4.14">sip-devel</Dependency>
-            <Dependency versionFrom="4.8.1">qt-webkit</Dependency>
+            <Dependency>sip-devel</Dependency>
+            <Dependency>qt-webkit</Dependency>
             <Dependency>python3</Dependency>
         </BuildDependencies>
         <Patches>
@@ -37,7 +37,7 @@
             <Dependency release="current">python3-qt</Dependency>
             <Dependency release="current">python3-qt-webkit</Dependency>
             <Dependency release="current">python3-qt-phonon</Dependency>
-            <Dependency versionFrom="4.14">sip-devel</Dependency>
+            <Dependency>sip-devel</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="data">/usr/share/sip</Path>
@@ -48,8 +48,8 @@
         <Name>python-qt-common</Name>
         <Summary>Common files shared between python-qt and python3-qt</Summary>
         <RuntimeDependencies>
-            <Dependency versionFrom="4.8.1">qt</Dependency>
-            <Dependency versionFrom="4.14">sip</Dependency>
+            <Dependency>qt</Dependency>
+            <Dependency>sip</Dependency>
         </RuntimeDependencies>
          <Conflicts>
             <Package releaseTo="60">python-qt-devel</Package>
@@ -69,8 +69,8 @@
         <Name>python-qt</Name>
         <RuntimeDependencies>
             <Dependency release="current">python-qt-common</Dependency>
-            <Dependency versionFrom="4.8.1">qt</Dependency>
-            <Dependency versionFrom="4.14">sip</Dependency>
+            <Dependency>qt</Dependency>
+            <Dependency>sip</Dependency>
         </RuntimeDependencies>
         <Conflicts>
             <Package releaseTo="60">python-qt-devel</Package>
@@ -86,8 +86,8 @@
         <Summary>A set of Python 3.x bindings for the Qt 4.x Toolkit</Summary>
         <RuntimeDependencies>
             <Dependency release="current">python-qt-common</Dependency>
-            <Dependency versionFrom="4.8.1">qt</Dependency>
-            <Dependency versionFrom="4.14">python3-sip</Dependency>
+            <Dependency>qt</Dependency>
+            <Dependency>python3-sip</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin/pyuic4-python3</Path>
@@ -100,7 +100,7 @@
         <Summary>Python 2.x bindings for QtWebkit library</Summary>
         <RuntimeDependencies>
             <Dependency release="current">python-qt</Dependency>
-            <Dependency versionFrom="4.8.1">qt-webkit</Dependency>
+            <Dependency>qt-webkit</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib/python2*/site-packages/PyQt4/*WebKit*</Path>
@@ -113,7 +113,7 @@
         <Summary>Python 3.x bindings for QtWebkit library</Summary>
         <RuntimeDependencies>
             <Dependency release="current">python3-qt</Dependency>
-            <Dependency versionFrom="4.8.1">qt-webkit</Dependency>
+            <Dependency>qt-webkit</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib/python3*/site-packages/PyQt4/*WebKit*</Path>
