--- a/programming/language/tcl/tls/pspec.xml
+++ b/programming/language/tcl/tls/pspec.xml
@@ -15,7 +15,7 @@
         <Description>TLS support for TCL.</Description>
         <Archive sha1sum="badee4d0a096e9951ffc1f82a6530f78b2404a2c" type="targz">mirrors://sourceforge/tls/tls1.6-src.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="8.5.7">tcl-devel</Dependency>
+            <Dependency>tcl-devel</Dependency>
             <Dependency>openssl-devel</Dependency>
         </BuildDependencies>
         <Patches>
