--- a/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:en_GB</IsA>
         <Summary>British English KDE4 internationalization package</Summary>
         <Description>kde-l10n-en_GB is the KDE4 internationalization package that provides British English translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="ca30627cbf3b19f9354d053d9e8d3e8d57ee3678">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-en_GB-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="ca30627cbf3b19f9354d053d9e8d3e8d57ee3678">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-en_GB-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
