--- a/desktop/kde/l10n/kde-l10n-fa/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fa/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fa</IsA>
         <Summary>Persian KDE4 internationalization package</Summary>
         <Description>kde-l10n-fa is the KDE4 internationalization package that provides Persian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="87b4bd13b5124a793ff5676a66f30aea146c1bc8">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-fa-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="87b4bd13b5124a793ff5676a66f30aea146c1bc8">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-fa-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
