--- a/desktop/kde/l10n/kde-l10n-nb/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nb/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nb</IsA>
         <Summary>Norwegian Bookmal KDE4 internationalization package</Summary>
         <Description>kde-l10n-nb is the KDE4 internationalization package that provides Norwegian Bookmal translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="7a5330d674c6a88934a0770e314465b33e13dcdd">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-nb-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="7a5330d674c6a88934a0770e314465b33e13dcdd">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-nb-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
