--- a/desktop/kde/l10n/kde-l10n-pt/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pt/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pt</IsA>
         <Summary>Portuguese KDE4 internationalization package</Summary>
         <Description>kde-l10n-pt is the KDE4 internationalization package that provides Portuguese translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="91d4c9642ef0e4d776de1b3bc4def124d6846f24">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-pt-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="91d4c9642ef0e4d776de1b3bc4def124d6846f24">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-pt-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
