--- a/desktop/kde/l10n/kde-l10n-sk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sk</IsA>
         <Summary>Slovak KDE4 internationalization package</Summary>
         <Description>kde-l10n-sk is the KDE4 internationalization package that provides Slovak translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="fac0e085191bb17629cc7f9c3c9cf9bc21faa4bc">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-sk-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="f7f7216d4c69da45508b107927b29c70b178190a">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-sk-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
