--- a/desktop/kde/l10n/kde-l10n-uk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-uk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:uk</IsA>
         <Summary>Ukrainian KDE4 internationalization package</Summary>
         <Description>kde-l10n-uk is the KDE4 internationalization package that provides Ukrainian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="6ded69e4ba96f26e3c6857b9b686909fec29dfc5">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-uk-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="fdb89b1c0acd71cf2c3bc6f7bf57a6d76b8196c3">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-uk-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
