--- a/desktop/kde/l10n/kde-l10n-es/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-es/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:es</IsA>
         <Summary>Spanish KDE4 internationalization package</Summary>
         <Description>kde-l10n-es is the KDE4 internationalization package that provides Spanish translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="4010e520f2291219ea6b5ef16f3a47cbc0459d1d">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-es-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="4010e520f2291219ea6b5ef16f3a47cbc0459d1d">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-es-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
