--- a/desktop/kde/l10n/kde-l10n-et/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-et/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:et</IsA>
         <Summary>Estonian KDE4 internationalization package</Summary>
         <Description>kde-l10n-et is the KDE4 internationalization package that provides Estonian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="7bcf1da54a448ccafba6de53a29d8f57666257b2">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-et-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="7bcf1da54a448ccafba6de53a29d8f57666257b2">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-et-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
