--- a/desktop/kde/l10n/kde-l10n-eu/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-eu/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:eu</IsA>
         <Summary>Basque KDE4 internationalization package</Summary>
         <Description>kde-l10n-eu is the KDE4 internationalization package that provides Basque translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="4b79a0c45887607e0f1d9bde2682d3f9c7be8753">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-eu-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="4b79a0c45887607e0f1d9bde2682d3f9c7be8753">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-eu-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
