--- a/desktop/kde/l10n/kde-l10n-fi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fi</IsA>
         <Summary>Finnish KDE4 internationalization package</Summary>
         <Description>kde-l10n-fi is the KDE4 internationalization package that provides Finnish translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="83ebc47853051db106fb1d6728815c9a4e95c924">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-fi-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="83ebc47853051db106fb1d6728815c9a4e95c924">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-fi-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
