--- a/desktop/kde/l10n/kde-l10n-fr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fr</IsA>
         <Summary>French KDE4 internationalization package</Summary>
         <Description>kde-l10n-fr is the KDE4 internationalization package that provides French translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="44b8df5b167c32f796b318a9a8d34cf245bc4016">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-fr-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="44b8df5b167c32f796b318a9a8d34cf245bc4016">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-fr-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
