--- a/desktop/kde/l10n/kde-l10n-ga/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ga/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ga</IsA>
         <Summary>Irish Gaelic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ga is the KDE4 internationalization package that provides Irish Gaelic translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="14515dd3991765cfb08375d8ba0eeb616134fbe4">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-ga-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="14515dd3991765cfb08375d8ba0eeb616134fbe4">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-ga-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
