--- a/desktop/kde/l10n/kde-l10n-hi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hi</IsA>
         <Summary>Hindi KDE4 internationalization package</Summary>
         <Description>kde-l10n-hi is the KDE4 internationalization package that provides Hindi translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="73075071a375aad5b67d177870bb5ae683ad66c0">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-hi-4.9.97.tar.xz</Archive>
+        <Archive type="tarbz2" sha1sum="73075071a375aad5b67d177870bb5ae683ad66c0">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-hi-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
