--- a/desktop/kde/l10n/kde-l10n-hr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hr</IsA>
         <Summary>Croatian KDE4 internationalization package</Summary>
         <Description>kde-l10n-hr is the KDE4 internationalization package that provides Croatian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="41e6d5329eafa74833c7800ae4dd4c6a29de7d60">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-hr-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="41e6d5329eafa74833c7800ae4dd4c6a29de7d60">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-hr-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
