--- a/desktop/kde/l10n/kde-l10n-hu/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hu/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hu</IsA>
         <Summary>Hungarian KDE4 internationalization package</Summary>
         <Description>kde-l10n-hu is the KDE4 internationalization package that provides Hungarian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="9c41c96f2e2c4688fe7755894cab4528753a0f91">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-hu-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="9c41c96f2e2c4688fe7755894cab4528753a0f91">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-hu-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
