--- a/desktop/kde/l10n/kde-l10n-ia/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ia/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ia</IsA>
         <Summary>Interlingua KDE4 internationalization package</Summary>
         <Description>kde-l10n-ia is the KDE4 internationalization package that provides Interlingua translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="b2bd4749454b778727f165256431ed7118c24445">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-ia-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="b2bd4749454b778727f165256431ed7118c24445">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-ia-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
