--- a/desktop/kde/l10n/kde-l10n-is/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-is/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:is</IsA>
         <Summary>Icelandic KDE4 internationalization package</Summary>
         <Description>kde-l10n-is is the KDE4 internationalization package that provides Icelandic translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="04c1119e373db4abd3c06fd53d708878177460af">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-is-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="04c1119e373db4abd3c06fd53d708878177460af">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-is-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
