--- a/desktop/kde/l10n/kde-l10n-ja/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ja/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ja</IsA>
         <Summary>Japanese KDE4 internationalization package</Summary>
         <Description>kde-l10n-ja is the KDE4 internationalization package that provides Japanese translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="9a7a0c347c2bc6e1a16821b369e43a35379953fc">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-ja-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="9a7a0c347c2bc6e1a16821b369e43a35379953fc">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-ja-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
