--- a/desktop/kde/l10n/kde-l10n-lv/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-lv/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:lv</IsA>
         <Summary>Latvian KDE4 internationalization package</Summary>
         <Description>kde-l10n-lv is the KDE4 internationalization package that provides Latvian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="1086800c6dea3a32a6fa1c8717a9abf5fdea1a87">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-lv-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="1086800c6dea3a32a6fa1c8717a9abf5fdea1a87">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-lv-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
