--- a/desktop/kde/l10n/kde-l10n-nds/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nds/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nds</IsA>
         <Summary>Low Saxon KDE4 internationalization package</Summary>
         <Description>kde-l10n-nds is the KDE4 internationalization package that provides Low Saxon translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="dc88aaa8c74ba2597d45f799f97cb9c7de8c1c70">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-nds-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="dc88aaa8c74ba2597d45f799f97cb9c7de8c1c70">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-nds-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
