--- a/desktop/kde/l10n/kde-l10n-nl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nl</IsA>
         <Summary>Dutch KDE4 internationalization package</Summary>
         <Description>kde-l10n-nl is the KDE4 internationalization package that provides Dutch translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="d4bf46d9434dd22b78597038a97873611883eeb7">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-nl-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="d4bf46d9434dd22b78597038a97873611883eeb7">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-nl-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
