--- a/desktop/kde/l10n/kde-l10n-nn/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nn/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nn</IsA>
         <Summary>Norwegian Nynorsk KDE4 internationalization package</Summary>
         <Description>kde-l10n-nn is the KDE4 internationalization package that provides Norwegian Nynorsk translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="2087350b549abd830dae1227dcbf98d0d1e5109c">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-nn-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="2087350b549abd830dae1227dcbf98d0d1e5109c">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-nn-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
