--- a/desktop/kde/l10n/kde-l10n-pa/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pa/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pa</IsA>
         <Summary>Punjabi KDE4 internationalization package</Summary>
         <Description>kde-l10n-pa is the KDE4 internationalization package that provides Punjabi translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="b1c570005aaa0c3d64af2e122a0fd21e12867709">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-pa-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="b1c570005aaa0c3d64af2e122a0fd21e12867709">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-pa-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
