--- a/desktop/kde/l10n/kde-l10n-pt_BR/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pt_BR/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pt_BR</IsA>
         <Summary>Brasilian Portuguese KDE4 internationalization package</Summary>
         <Description>kde-l10n-pt-BR is the KDE4 internationalization package that provides Brasilian Portuguese translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="b07a40b4d14520f4dcd6c46a6405f383cada1a8f">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-pt_BR-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="b07a40b4d14520f4dcd6c46a6405f383cada1a8f">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-pt_BR-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
