--- a/desktop/kde/l10n/kde-l10n-ro/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ro/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ro</IsA>
         <Summary>Romanian KDE4 internationalization package</Summary>
         <Description>kde-l10n-ro is the KDE4 internationalization package that provides Romanian translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="65d5073502fabcd7bf2806d6065022d5ba2afd34">mirrors://kde/stable/4.9.97/src/kde-l10n/kde-l10n-ro-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="65d5073502fabcd7bf2806d6065022d5ba2afd34">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-ro-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
