--- a/desktop/kde/l10n/kde-l10n-si/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-si/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:si</IsA>
         <Summary>Sinhala KDE4 internationalization package</Summary>
         <Description>kde-l10n-si is the KDE4 internationalization package that provides Sinhala translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="7362f4f2c6fdad77da76d6cf298187590797af01">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-si-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="f48ba468ca1b8a4d82506e1dac7a1d16879e9442">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-si-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
