--- a/desktop/kde/l10n/kde-l10n-tg/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tg/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:tg</IsA>
         <Summary>Tajik KDE4 internationalization package</Summary>
         <Description>kde-l10n-tg is the KDE4 internationalization package that provides Tajik translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="407d97f239b92de4d9c325b8a419e13e1a604f99">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-tg-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="18431ae4d4a908d36a3523f1eb5e35a51c8534a8">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-tg-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
