--- a/desktop/kde/l10n/kde-l10n-th/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-th/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:th</IsA>
         <Summary>Thai KDE4 internationalization package</Summary>
         <Description>kde-l10n-ku is the KDE4 internationalization package that provides Thai translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="7f91ce0c7ba70abac0d96255fbe9128fff2c31d6">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-th-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="ccc9ecac52aa322e119eaddd789912b26a8d279b">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-th-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
