--- a/desktop/kde/l10n/kde-l10n-ug/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ug/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ug</IsA>
         <Summary>Uyghur KDE4 internationalization package</Summary>
         <Description>kde-l10n-ug is the KDE4 internationalization package that provides Uyghur translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="7049218ef8b583c4399c1d70b1fd1f83bee9d7e9">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-ug-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="0ede6258610426425e53c4b8f8a5730becac62f9">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-ug-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
