--- a/desktop/kde/l10n/kde-l10n-vi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-vi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:vi</IsA>
         <Summary>Vietnamese KDE4 internationalization package</Summary>
         <Description>kde-l10n-vi is the KDE4 internationalization package that provides Vietnamese translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="f4144350581f862affebf3650d2a338e7d566555">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-vi-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="63334b3cb9abccd7a7975864742a0f3099773d9c">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-vi-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
