--- a/desktop/kde/l10n/kde-l10n-zh_CN/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-zh_CN/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:zh_CN</IsA>
         <Summary>Chinese Simplified KDE4 internationalization package</Summary>
         <Description>kde-l10n-zh_CN is the KDE4 internationalization package that provides Chinese Simplified translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="90fe7eec87774dfdd4c37a8aa204d8f83651d307">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-zh_CN-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="f43cdbba64c3c8ed41d1bc61d04f29c278ed0ba0">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-zh_CN-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
