--- a/desktop/kde/l10n/kde-l10n-zh_TW/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-zh_TW/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:zh_TW</IsA>
         <Summary>Chinese Traditional KDE4 internationalization package</Summary>
         <Description>kde-l10n-zh_TW is the KDE4 internationalization package that provides Chinese Traditional translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="8b6969239a1c8abcd4946223568d0af88140929f">mirrors://kde/stable/4.8.4/src/kde-l10n/kde-l10n-zh_TW-4.8.4.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="fde6c4c4ec5dec5b66ebc4b8aafaa7a21abaf6f8">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-zh_TW-4.9.97.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
