--- a/programming/language/python/mmpython/pspec.xml
+++ b/programming/language/python/mmpython/pspec.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" ?>
+<!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
         <Name>mmpython</Name>
@@ -22,8 +24,7 @@
         </Files>
     </Package>
     
-    <History>
-      
+    <History>     
         <Update release="1">
             <Date>2013-01-15</Date>
             <Version>0.4.10</Version>
