--- a/programming/language/python/sip/pspec.xml
+++ b/programming/language/python/sip/pspec.xml
@@ -29,9 +29,6 @@
             <Path fileType="executable">/usr/bin</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
-     <Conflicts>
-        <Package releaseTo="48">sip-devel</Package>
-    </Conflicts>
     </Package>
 
     <Package>
@@ -71,6 +68,13 @@
     </Package>
 
     <History>
+      <Update release="2">
+            <Date>2013-01-18</Date>
+            <Version>4.14.2</Version>
+            <Comment>Fixed</Comment>
+            <Name>Osman Erkan</Name>
+            <Email>osman.erkan@yandex.com</Email>
+        </Update>
         <Update release="1">
             <Date>2012-12-15</Date>
             <Version>4.14.2</Version>
