--- a/desktop/kde/l10n/kde-l10n-sk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sk/pspec.xml
@@ -12,13 +12,17 @@
         <IsA>locale:sk</IsA>
         <Summary>Slovak KDE4 internationalization package</Summary>
         <Description>kde-l10n-sk is the KDE4 internationalization package that provides Slovak translations for KDE4 applications.</Description>
-        <Archive type="tarxz" sha1sum="f7f7216d4c69da45508b107927b29c70b178190a">mirrors://kde/unstable/4.9.97/src/kde-l10n/kde-l10n-sk-4.9.97.tar.xz</Archive>
+        <Archive type="tarxz" sha1sum="0e20021abb8a4ea6655b9141d6474d2202e32c59">mirrors://kde/unstable/4.9.98/src/kde-l10n/kde-l10n-sk-4.9.98.tar.xz</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>kde-l10n-sk</Name>
+        <Replaces>
+            <Package>kde4-i18n-sk</Package>
+            <Package>kde-i18n-sk</Package>
+        </Replaces>
         <Files>
             <Path fileType="localedata">/usr/share/locale</Path>
             <Path fileType="data">/usr/share/kde4</Path>
@@ -29,8 +33,8 @@
     
     <History>
         <Update release="1">
-            <Date>2012-06-05</Date>
-            <Version>4.8.4</Version>
+            <Date>2013-01-19</Date>
+            <Version>4.9.98</Version>
             <Comment>First release</Comment>
             <Name>Yusuf Aydemir</Name>
             <Email>yusuf.aydemir@istanbul.com</Email>
