--- a/programming/language/tcl/expect/pspec.xml
+++ b/programming/language/tcl/expect/pspec.xml
@@ -13,14 +13,15 @@
         <IsA>library</IsA>
         <Summary>Tool for automating interactive applications</Summary>
         <Description>Expect is a tcl application for automating and testing interactive applications such as telnet, ftp, passwd, fsck, rlogin, tip, etc. Expect makes it easy for a script to control another program and interact with it.</Description>
-        <Archive sha1sum="6e317b3509b6388c725e3bd5184000c2a2a69900" type="targz">mirrors://sourceforge/expect/expect-5.44.1.15.tar.gz</Archive>
+        <Archive sha1sum="e634992cab35b7c6931e1f21fbb8f74d464bd496" type="targz">mirrors://sourceforge/expect/expect5.45.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>tcl</Dependency>
         </BuildDependencies>
         <Patches>
-            <Patch level="1">expect-5.44.1.15-gfbsd.patch</Patch>
             <Patch level="1">expect-5.44.1.15-ldflags.patch</Patch>
-            <Patch level="0">expect-5.44.1.15_with-tk-no.patch</Patch>
+	    <Patch level="1">pardus/expect-5.43.0-fixformatsecurity.patch</Patch>
+	    <Patch level="1">pardus/expect-fedora-5.32.2-random.patch</Patch>
+	    <Patch level="1">pardus/expect-fedora-5.43.0-log_file.patch</Patch>
         </Patches>
     </Source>
 
@@ -39,6 +40,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2013-01-26</Date>
+            <Version>5.45</Version>
+            <Comment>bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2010-10-13</Date>
             <Version>5.44.1.15</Version>
