--- a/programming/language/tcl/tcltk/pspec.xml
+++ b/programming/language/tcl/tcltk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>An X11 toolkit implemented with the Tcl scripting language</Summary>
         <Description>Tk is an X Windows widget set designed to work closely with the tcl scripting language. It allows you to write simple programs with full featured GUIs in only a little more time then it takes to write a text based interface.</Description>
-        <Archive sha1sum="292a01a39e9378d2455e4492f39500baeb6b63db" type="targz">mirrors://sourceforge/tcl/tk8.5.12-src.tar.gz</Archive>
+        <Archive sha1sum="c42e160285e2d26eae8c2a1e6c6f86db4fa7663b" type="targz">mirrors://sourceforge/tcl/tk8.6.0-src.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>tcl-devel</Dependency>
             <Dependency>libXft-devel</Dependency>
@@ -57,6 +57,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2013-01-26</Date>
+            <Version>8.6.0</Version>
+            <Comment>bump</Comment>
+            <Name>Erdinç Gültekin</Name>
+            <Email>erdincgultekin@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2012-09-15</Date>
             <Version>8.5.12</Version>
